fixed homepage logo on mobile

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -54,7 +54,7 @@ section.module.parallax {
   height: 650px;
   background-position: 50% 50%;
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  // background-attachment: fixed;
   background-size: cover;
 }
 section.module.parallax h1 {
